--- a/src/MAUIApp/Pages/Users/ListPage.xaml
+++ b/src/MAUIApp/Pages/Users/ListPage.xaml
@@ -4,17 +4,17 @@
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:baseviewmodels="clr-namespace:MAUIApp.ViewModels;assembly=MAUIApp"
-	xmlns:dtos="clr-namespace:Domain.DTOs.Products;assembly=Domain"
-	xmlns:localviews="clr-namespace:MAUIApp.Views.Products"
+	xmlns:dtos="clr-namespace:Domain.DTOs.Users;assembly=Domain"
 	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-	xmlns:viewmodels="clr-namespace:MAUIApp.ViewModels.Products"
+	xmlns:viewmodels="clr-namespace:MAUIApp.ViewModels.Users"
 	xmlns:views="clr-namespace:MAUIApp.Views"
 	x:DataType="{x:Type viewmodels:ListViewModel}"
 	BackgroundColor="{StaticResource BackgroundSecondary}"
-	Shell.NavBarIsVisible="False">
+	Shell.NavBarIsVisible="False"
+	Shell.PresentationMode="Animated">
 
 	<Grid RowDefinitions="Auto, 1*" RowSpacing="16">
-		<views:NavigationBar Title="Sản phẩm" IsBackButtonVisible="False">
+		<views:NavigationBar Title="Người dùng" BackCommand="{Static baseviewmodels:StaticViewModel.ClosePageCommand}">
 			<HorizontalStackLayout>
 				<ImageButton
 					Command="{Binding ToFilterPageCommand}"
@@ -50,17 +50,13 @@
 					ItemsSource="{Binding Items}"
 					SelectionMode="None">
 					<ListView.ItemTemplate>
-						<DataTemplate x:DataType="{x:Type dtos:ProductShort}">
+						<DataTemplate x:DataType="{x:Type dtos:UserShort}">
 							<ViewCell>
-								<localviews:ProductShortView
-									Name="{Binding Name}"
-									Barcode="{Binding Barcode}"
-									InStock="{Binding InStock}"
-									Price="{Binding Price}">
-									<localviews:ProductShortView.GestureRecognizers>
-										<TapGestureRecognizer Command="{Static baseviewmodels:StaticViewModel.ToProductDetailsPageCommand}" CommandParameter="{Binding Id}" />
-									</localviews:ProductShortView.GestureRecognizers>
-								</localviews:ProductShortView>
+								<Label Text="{Binding Name}" TextColor="{StaticResource TextPrimary}" FontSize="Body" Margin="16,8">
+									<Label.GestureRecognizers>
+										<TapGestureRecognizer Command="{Static baseviewmodels:StaticViewModel.ToUserDetailsAdminPageCommand}" CommandParameter="{Binding Id}"/>
+									</Label.GestureRecognizers>
+								</Label>
 							</ViewCell>
 						</DataTemplate>
 					</ListView.ItemTemplate>
