--- a/src/MAUIApp/Resources/Styles/CustomControls.xaml
+++ b/src/MAUIApp/Resources/Styles/CustomControls.xaml
@@ -6,6 +6,7 @@
 	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 	xmlns:views="clr-namespace:MAUIApp.Views;assembly=MAUIApp">
 
+	<!--#region NavigationBar -->
 	<ControlTemplate x:Key="NavigationBarControlTemplate">
 		<Border
 			BackgroundColor="{StaticResource BackgroundPrimary}"
@@ -65,7 +66,9 @@
 		<Setter Property="BodyPadding" Value="8,8,16,8" />
 		<Setter Property="BackMargin" Value="0,0,8,0" />
 	</Style>
+	<!--#endregion-->
 
+	<!--#region Card -->
 	<Style x:Key="CardHeaderLabel" TargetType="{x:Type Label}">
 		<Setter Property="Margin" Value="16,0,16,8" />
 		<Setter Property="FontAttributes" Value="Bold" />
@@ -103,6 +106,7 @@
 		<Setter Property="StrokeShape" Value="RoundRectangle 16,16,0,0" />
 		<Setter Property="BodyPadding" Value="0" />
 	</Style>
+	<!--#endregion-->
 
 	<!--#region ProductItemView-->
 	<ControlTemplate x:Key="ProductItemViewQuantityInStockControlTemplate">
