--- a/src/MAUIApp/Pages/Users/EditMePage.xaml
+++ b/src/MAUIApp/Pages/Users/EditMePage.xaml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-	x:Class="MAUIApp.Pages.Users.CreatePage"
+	x:Class="MAUIApp.Pages.Users.EditMePage"
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:baseviewmodels="clr-namespace:MAUIApp.ViewModels"
+	xmlns:entities="clr-namespace:Identity.Domain.Entity;assembly=Identity.Domain"
+	xmlns:the49="https://schemas.the49.com/dotnet/2023/maui"
 	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 	xmlns:viewmodels="clr-namespace:MAUIApp.ViewModels.Users"
 	xmlns:views="clr-namespace:MAUIApp.Views"
-	x:DataType="{x:Type viewmodels:CreateViewModel}"
-	Background="{StaticResource BackgroundSecondary}"
+	x:DataType="{x:Type viewmodels:EditMeViewModel}"
+	BackgroundColor="{StaticResource BackgroundSecondary}"
 	Shell.NavBarIsVisible="False"
 	Shell.PresentationMode="ModalAnimated">
 
 	<Grid RowDefinitions="Auto, 1*" RowSpacing="16">
 		<views:NavigationBar
-			Title="Tạo người dùng"
+			Title="Sửa thông tin"
 			BackCommand="{Static baseviewmodels:StaticViewModel.ClosePageCommand}"
 			Style="{StaticResource CloseNavigationBar}">
+
 			<Button Command="{Binding SaveCommand}" Style="{StaticResource SaveButton}" />
 		</views:NavigationBar>
 
@@ -44,34 +47,13 @@
 						</Grid.Resources>
 
 						<Label Grid.Row="0" Text="Tên" />
-						<Entry Grid.Row="0" Text="{Binding Name}" />
+						<Entry Grid.Row="0" Text="{Binding Model.Name, Mode=TwoWay}" />
 						<views:Separator Grid.Row="0" />
 
-						<Label Grid.Row="1" Text="Điện thoại" />
-						<Entry Grid.Row="1" Text="{Binding Phonenumber}" />
+						<Label Grid.Row="1" Text="Số điện thoại" />
+						<Entry Grid.Row="1" Text="{Binding Model.Phonenumber, Mode=TwoWay}" />
 						<views:Separator Grid.Row="1" />
-
-						<Label Grid.Row="2" Text="Tên đăng nhập" />
-						<Entry Grid.Row="2" Text="{Binding Username}" />
-						<views:Separator Grid.Row="2" />
 					</Grid>
-				</views:Card>
-
-				<views:Card HeaderTitle="Quyền hạn">
-					<VerticalStackLayout Spacing="8">
-						<HorizontalStackLayout Spacing="8">
-							<CheckBox IsChecked="{Binding HasAdminRole}" />
-							<Label Text="Quản trị viên" VerticalOptions="Center" />
-						</HorizontalStackLayout>
-						<HorizontalStackLayout Spacing="8">
-							<CheckBox IsChecked="{Binding HasManagerRole}" />
-							<Label Text="Quản lý" VerticalOptions="Center" />
-						</HorizontalStackLayout>
-						<HorizontalStackLayout Spacing="8">
-							<CheckBox IsChecked="{Binding HasEmployeeRole}" />
-							<Label Text="Nhân viên" VerticalOptions="Center" />
-						</HorizontalStackLayout>
-					</VerticalStackLayout>
 				</views:Card>
 			</VerticalStackLayout>
 		</ScrollView>
